отправка и получение сообщений

--- a/Views/MessagesTest/Delete.cshtml
+++ b/Views/MessagesTest/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.MessageSended)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Messagereaded)
+            @Html.DisplayNameFor(model => model.MessageReaded)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Messagereaded)
+            @Html.DisplayFor(model => model.MessageReaded)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsGetted)
