--- a/Views/MessagesTest/Edit.cshtml
+++ b/Views/MessagesTest/Edit.cshtml
@@ -34,9 +34,9 @@
                 <span asp-validation-for="MessageSended" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Messagereaded" class="control-label"></label>
-                <input asp-for="Messagereaded" class="form-control" />
-                <span asp-validation-for="Messagereaded" class="text-danger"></span>
+                <label asp-for="MessageReaded" class="control-label"></label>
+                <input asp-for="MessageReaded" class="form-control" />
+                <span asp-validation-for="MessageReaded" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
