--- a/Views/MessagesTest/Index.cshtml
+++ b/Views/MessagesTest/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.MessageSended)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Messagereaded)
+                @Html.DisplayNameFor(model => model.MessageReaded)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IsGetted)
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.MessageSended)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Messagereaded)
+                @Html.DisplayFor(modelItem => item.MessageReaded)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsGetted)
