--- a/Views/MessagesTest/Index.cshtml
+++ b/Views/MessagesTest/Index.cshtml
@@ -36,6 +36,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.IsReaded)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SenderDelta)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RecipientDelta)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -65,6 +71,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsReaded)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SenderDelta)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RecipientDelta)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
